2008-03-01  Per Bothner  <per@bothner.com>

	* EnclosingMethodAttr.java: New extends, extends Attribute.
	* Makefile.am: Update accordingly.
	* ClassFileInput.java (readAttribute): Recognize EnclosingMethod
	attribute.

2008-02-28  Per Bothner  <per@bothner.com>

	* ClassTypeWriter.java (printOptionalIndex): Print '#' first.

2007-11-04  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java: Revert following the Java2 delegation model.
	Give the current ClassLoader priority over ancestor ClassLoaders.
	(loadClass): New methods.
	(findClass): Remove method.

2007-11-02  Per Bothner  <per@bothner.com>

	* ObjectType.java (getField, getMethod, getMethods): New methods.
	* PrimType.java (compare): If other is non-ClassType non-ArrayType
	defer to other (perhaps a LangObjType).

2007-04-01  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java (getContextPackage): New static method.

2007-03-13  Per Bothner  <per@bothner.com>

	* ClassType.java (access_flags): Make non-public.
	(addModifiers): New method.

2007-02-08  Per Bothner  <per@bothner.com>

	* ArrayType.java: Implement Externalizable.
	(writeExternal, readExternal, readResolve): New methods.

	* ArrayType.java (getReflectClass): New method.
	Use element's ClassLoader.

	* Type.java: Implement java.lang.reflect.Type if JAVA5.

2007-01-20  Per Bothner  <per@bothner.com>

	* ObjectType.java (getContextClass): Fix so PreProcess doesn't break.

2007-01-19  Per Bothner  <per@bothner.com>

	* ObjectType.java (thisClassLoader): New field.
	(getContextClass): New static method.
	(getReflectClass): Use getContextClass.

2007-01-14  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java: Change to use Java 1.2 delegation model.
	I.e. implement findClass rather than loadClass if JAVA2 is enabled.
	(<init>): New constructor, to pass in parent ClassLoader.

2007-01-02  Per Bothner  <per@bothner.com>

	* Method.java (makeCloneMethod): New method.
	* ObjectType.java (getMethods): New method, "moved up" from ClassType.